--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "_grid";
 @import "_reset";
+@import "_fontsIconsSocial";
 @import "_fontsIcons";
 @import "_variables";
 @import "_blocks/_header";
