--- a/scss/_blocks/_index.scss
+++ b/scss/_blocks/_index.scss
@@ -1,5 +1,9 @@
 /* ---Home Page--- */
 
+.mainFounder{
+  margin-bottom: 5.625em;
+}
+
 .quote {
   display: block;
   margin: 1em 0;
@@ -26,6 +30,7 @@
     max-width: 300px;
     max-height: 300px;
     border-radius: 50%;
+    margin-bottom: 1em;
   }
 }
 
@@ -39,14 +44,16 @@
   font-size: 2em;
   color: $colorFont_1;
   margin-bottom: 1em;
-//  padding-bottom: 1em;
-//  border-bottom: 1px dotted darken($borderColor, 10%);
 }
 
-.founderInfoItem,
+.founderInfoItem{
+  margin-bottom: 1.5em;
+}
 .founderWorkItem,
 .founderEducationItem{
-  margin-bottom: .75em;
+  margin-bottom: 1.5em;
+  position: relative;
+  margin-left: 3.5em;
 }
 
 .founderInfoItemSkill{
@@ -57,6 +64,12 @@
 }
 
 @media (min-width: 768px) {
+
+  .founderAvatar{
+    img{
+      margin-bottom: 0;
+    }
+  }
 
   .founderTitle{
     font-size: 1.563em;
