--- a/scss/_fontsIcons.scss
+++ b/scss/_fontsIcons.scss
@@ -1,148 +1,46 @@
+/* ---Font Icons--- */
+
 @font-face {
-  font-family: 'Grands';
-  src:url('../fonts/fontsIcons/Grands.eot');
-  src:url('../fonts/fontsIcons/Grands.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/fontsIcons/Grands.svg#Grands') format('svg'),
-  url('../fonts/fontsIcons/Grands.woff') format('woff'),
-  url('../fonts/fontsIcons/Grands.ttf') format('truetype');
+  font-family: 'typicons';
   font-weight: normal;
   font-style: normal;
+  src: url('../fonts/fontsTypIcons/typicons.eot');
+  src: url('../fonts/fontsTypIcons/typicons.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/fontsTypIcons/typicons.woff') format('woff'),
+  url('../fonts/fontsTypIcons/typicons.ttf') format('truetype'),
+  url('../fonts/fontsTypIcons/typicons.svg#typicons') format('svg');
 }
 
-/* Use the following CSS code if you want to use data attributes for inserting your icons */
-[data-icon]:before {
-  font-family: 'Grands';
-  content: attr(data-icon);
-  speak: none;
-  font-weight: normal;
-  -webkit-font-smoothing: antialiased;
-}
-
-/* Use the following CSS code if you want to have a class per icon */
-[class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: 'Grands';
+/* :before psuedo-selector inserts and styles icon */
+.typcn:before {
+  font-family: 'typicons';
   font-style: normal;
-  speak: none;
   font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  font-size: 3em;
+  text-align: center;
   -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  position: absolute;
+  left: -1.2em;
+  top: -.1em;
 }
-.icon-YouTube:before {
-  content: "\e000";
+
+.typcn-briefcase:before {
+  content: '\e034';
 }
-.icon-Yandex:before {
-  content: "\e001";
+
+.typcn-pencil:before {
+  content: '\e0c3';
 }
-.icon-Vkontakte:before {
-  content: "\e002";
+
+.typcn-mortar-board:before {
+  content: '\e0be';
 }
-.icon-VK:before {
-  content: "\e003";
-}
-.icon-vimeo:before {
-  content: "\e004";
-}
-.icon-twitter:before {
-  content: "\e005";
-}
-.icon-tumblr:before {
-  content: "\e006";
-}
-.icon-Steam:before {
-  content: "\e007";
-}
-.icon-StackOverflow:before {
-  content: "\e008";
-}
-.icon-SoundCloud:before {
-  content: "\e009";
-}
-.icon-Skype:before {
-  content: "\e00a";
-}
-.icon-Share:before {
-  content: "\e00b";
-}
-.icon-RSS:before {
-  content: "\e00c";
-}
-.icon-Readability:before {
-  content: "\e00d";
-}
-.icon-Read-it-Later:before {
-  content: "\e00e";
-}
-.icon-Pocket:before {
-  content: "\e00f";
-}
-.icon-Pinterest:before {
-  content: "\e010";
-}
-.icon-Picasa:before {
-  content: "\e011";
-}
-.icon-OpenID:before {
-  content: "\e012";
-}
-.icon-MySpace:before {
-  content: "\e013";
-}
-.icon-MoiKrug:before {
-  content: "\e014";
-}
-.icon-Linked-in:before {
-  content: "\e015";
-}
-.icon-LiveJournal:before {
-  content: "\e016";
-}
-.icon-lastfm:before {
-  content: "\e017";
-}
-.icon-Jabber:before {
-  content: "\e018";
-}
-.icon-Instapaper:before {
-  content: "\e019";
-}
-.icon-HabraHabr:before {
-  content: "\e01a";
-}
-.icon-google:before {
-  content: "\e01b";
-}
-.icon-GitHub-octoface:before {
-  content: "\e01c";
-}
-.icon-GitHub-circle:before {
-  content: "\e01d";
-}
-.icon-FourSquare:before {
-  content: "\e01e";
-}
-.icon-flickr:before {
-  content: "\e01f";
-}
-.icon-Flattr:before {
-  content: "\e020";
-}
-.icon-facebook:before {
-  content: "\e021";
-}
-.icon-Evernote:before {
-  content: "\e022";
-}
-.icon-Email:before {
-  content: "\e023";
-}
-.icon-DropBox:before {
-  content: "\e024";
-}
-.icon-Blogspot:before {
-  content: "\e025";
-}
-.icon-BitBucket:before {
-  content: "\e026";
-}
-.icon-YouTube-play:before {
-  content: "\e027";
+
+.typcn-business-card:before {
+  content: '\e036';
 }
