--- a/svitlapage/scss/_blocks/_contactInfoSection.scss
+++ b/svitlapage/scss/_blocks/_contactInfoSection.scss
@@ -12,8 +12,6 @@
   margin-left: 4.5em;
 }
 
-
-
 .topInfoContentName{
   font-family: $sans-bold;
   font-size: 1.6em;
@@ -87,7 +85,7 @@
     font-family: $sans-bold;
     font-size: 2.188em;
     margin-bottom: .25em;
-    margin-top: -.25em;
+    line-height: 1em;
   }
 
   .topInfoContentAge,
