--- a/svitlapage/scss/_blocks/_relativeInfoSection.scss
+++ b/svitlapage/scss/_blocks/_relativeInfoSection.scss
@@ -29,6 +29,20 @@ span.icon-person {
 }
 
 .blockTableRowItem{
+
+  @extend %sectionItem;
+//  @include box-shadow(2px 2px 0 $borderShadowColor);
+//  @include border-radius($borderRadius);
+//  border: 1px solid $borderColor_1;
+//  background: $primeSecondBackgroundColor;
+//  margin-bottom: 0.6em;
+//  display: table;
+//  padding: 1.04em 0.88em 1.12em;
+//  width: 100%;
+//  position: relative;
+}
+
+.blockTableRowItem{
   background: $primeSecondBackgroundColor;
 }
 
@@ -42,18 +56,6 @@ span.icon-person {
 
   .blockTableRowHidden{
     display: none !important;
-  }
-
-  .blockTableRowItem{
-    @include box-shadow(2px 2px 0 $borderShadowColor);
-    @include border-radius($borderRadius);
-    border: 1px solid $borderColor_1;
-    background: $primeSecondBackgroundColor;
-    margin-bottom: 0.6em;
-    display: table;
-    padding: 1.04em 0.88em 1.12em;
-    width: 100%;
-    position: relative;
   }
 
   .blockTableRow .pseudoTd{
