--- a/svitlapage/css/main.css
+++ b/svitlapage/css/main.css
@@ -4987,6 +4987,22 @@ html, body, .offCanvasWrap {
     display: inline-block;
   }
 }
+.infoItem, .detailsItem, .blockTableRowItem {
+  -moz-box-shadow: 2px 2px 0 #ebebeb;
+  -webkit-box-shadow: 2px 2px 0 #ebebeb;
+  box-shadow: 2px 2px 0 #ebebeb;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #e1e4e6;
+  background: #ffffff;
+  margin-bottom: 0.6em;
+  display: table;
+  padding: 1.04em 0.88em 1.12em;
+  width: 100%;
+  position: relative;
+}
+
 /*----- Font -----*/
 @font-face {
   font-family: "ProximaNova-Semibold";
@@ -5509,7 +5525,7 @@ iframe {
     font-family: "ProximaNova-Bold", Arial, sans-serif;
     font-size: 2.188em;
     margin-bottom: .25em;
-    margin-top: -.25em;
+    line-height: 1em;
   }
 
   .topInfoContentAge,
@@ -5548,22 +5564,6 @@ iframe {
   }
 }
 /*----- Item Section -----*/
-.infoItem {
-  -moz-box-shadow: 2px 2px 0 #ebebeb;
-  -webkit-box-shadow: 2px 2px 0 #ebebeb;
-  box-shadow: 2px 2px 0 #ebebeb;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  border: 1px solid #e1e4e6;
-  background: #ffffff;
-  margin-bottom: 0.6em;
-  display: table;
-  padding: 1.04em 0.88em 1.12em;
-  width: 100%;
-  position: relative;
-}
-
 .open {
   -moz-border-radius: 5px 5px 0 0;
   -webkit-border-radius: 5px;
@@ -5573,24 +5573,19 @@ iframe {
 }
 
 .detailsItem {
-  -moz-box-shadow: 2px 2px 0 #ebebeb;
-  -webkit-box-shadow: 2px 2px 0 #ebebeb;
-  box-shadow: 2px 2px 0 #ebebeb;
   -moz-border-radius: 0 0 5px 5px;
   -webkit-border-radius: 0;
   border-radius: 0 0 5px 5px;
-  border: 1px solid #e1e4e6;
   border-top: none;
-  background: #ffffff;
-  margin-bottom: 0.6em;
-  padding: 1.04em 0.88em 1.12em;
-  width: 100%;
-  position: relative;
-  top: -2px;
+  top: -5px;
+  padding: 0em 2em 1.12em;
   display: none;
 }
 
 .details {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
   -moz-box-shadow: 2px 2px 0 #ebebeb;
   -webkit-box-shadow: 2px 2px 0 #ebebeb;
   box-shadow: 2px 2px 0 #ebebeb;
@@ -5883,22 +5878,6 @@ span.icon-person {
 
   .blockTableRowHidden {
     display: none !important;
-  }
-
-  .blockTableRowItem {
-    -moz-box-shadow: 2px 2px 0 #ebebeb;
-    -webkit-box-shadow: 2px 2px 0 #ebebeb;
-    box-shadow: 2px 2px 0 #ebebeb;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    border: 1px solid #e1e4e6;
-    background: #ffffff;
-    margin-bottom: 0.6em;
-    display: table;
-    padding: 1.04em 0.88em 1.12em;
-    width: 100%;
-    position: relative;
   }
 
   .blockTableRow .pseudoTd {
