--- a/svitlapage/scss/main.scss
+++ b/svitlapage/scss/main.scss
@@ -2,6 +2,7 @@
 @import "compass/css3";
 @import "_grid";
 @import "_variables";
+@import "_placeholders";
 @import "_fonts";
 @import "_global";
 @import "_iconFont";
