--- a/svitlapage/scss/_blocks/_header.scss
+++ b/svitlapage/scss/_blocks/_header.scss
@@ -154,6 +154,18 @@
 
 }
 
+@media screen and (max-width: 480px){
+
+  .homeLink_M {
+    padding: 1.1em .75em 1.16em .75em;
+  }
+
+  .nav_M {
+    padding: 1.2em .75em 1.08em .75em;
+  }
+
+}
+
 @media screen and (min-width: 768px) {
 
   .searchTop_M {
