--- a/tech-category/css/main.css
+++ b/tech-category/css/main.css
@@ -1886,7 +1886,7 @@ img {
   }
 
   .headerSearch input {
-    width: 80%;
+    width: 75%;
     margin-left: 15px;
   }
 
@@ -1914,6 +1914,10 @@ img {
     display: none;
   }
 
+  .headerBottom {
+    height: 44px;
+  }
+
   ._colorElectronics .topMenuLink {
     color: #006699;
   }
@@ -1930,7 +1934,7 @@ img {
     color: #003399;
   }
 
-  .headerBottom .col-xs-5 {
+  .headerBottom .col-xs-6 {
     overflow: hidden;
   }
 }
@@ -3016,6 +3020,10 @@ img {
   .footerSearchWrap {
     max-width: 400px;
     margin: 25px auto 25px;
+  }
+
+  .footerSearch input {
+    width: 80%;
   }
 }
 
