--- a/tech-single/scss/_header.scss
+++ b/tech-single/scss/_header.scss
@@ -416,7 +416,7 @@
   }
 
   .headerSearch input{
-    width: 80%;
+    width: 75%;
     margin-left: 15px;
   }
 
@@ -443,6 +443,11 @@
     top: 45px;
     display: none;
   }
+
+  .headerBottom{
+    height: 44px;
+  }
+
 
   //-----colorElectronics
 
@@ -477,7 +482,7 @@
   }
 
   .headerBottom{
-    .col-xs-5{
+    .col-xs-6{
       overflow: hidden;
     }
   }
