--- a/fantik/scss/main.scss
+++ b/fantik/scss/main.scss
@@ -8,5 +8,5 @@
 @import "_global";
 @import "_placeholders";
 @import "_header";
-@import "_newGoods";
+@import "_newGoodsAndSaw";
 @import "_footer";
