--- a/fantik/scss/_header.scss
+++ b/fantik/scss/_header.scss
@@ -1,5 +1,9 @@
 /*----- Header -----*/
 
+.mainHeader{
+  margin-bottom: em(25px);
+}
+
 .headerContact{
   margin: em(10px) 0;
   overflow: hidden;
