--- a/fantik/scss/_variables.scss
+++ b/fantik/scss/_variables.scss
@@ -3,6 +3,7 @@ $primeColorSecond: #01b179;
 $whiteColor: #fff;
 $greyLightColor: #e9eaea;
 $greyDarkColor: #838383;
+$contactPlaceholder: #a2aaaf;
 
 $browser-context: 14px;
 
