--- a/fantik/scss/main.scss
+++ b/fantik/scss/main.scss
@@ -1,12 +1,14 @@
 @import "compass/reset";
 @import "compass/css3";
 @import "_variables";
+@import "_placeholders";
 @import "_mixins";
 @import "_grid";
 @import "_fonts";
 @import "_font-icons";
 @import "_global";
-@import "_placeholders";
 @import "_header";
+@import "_breadCrumbs";
+@import "_contact";
 @import "_newGoodsAndSaw";
 @import "_footer";
