--- a/fantik/scss/main.scss
+++ b/fantik/scss/main.scss
@@ -10,5 +10,6 @@
 @import "_header";
 @import "_breadCrumbs";
 @import "_contact";
+@import "_product";
 @import "_newGoodsAndSaw";
 @import "_footer";
